--- a/A&E Pesadilla de un Padre/video.html
+++ b/A&E Pesadilla de un Padre/video.html
@@ -251,12 +251,12 @@
             window.open("https://www.mylifetime.com/movies/a-fathers-nightmare");
         }
     </script>
-</head>
+</head> 
 
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <iframe style="margin-left:-70px;" width="460" height="260"src="https://youtu.be/AA2v83c-Nu4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="margin-left:-70px;" width="460" height="260"src="https://www.youtube.com/embed/AA2v83c-Nu4?rel=0&autoplay=1&modestbranding=0&playlist=Z7oyMy9ECHY&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
@@ -271,6 +271,7 @@
                 <p style="margin-top: -5px; font-size: 12px;"> Tras la muerte de su esposa, un padre envía a su hija a la universidad. Allí, la chica no tarda en caer bajo los encantos de su compañera de cuarto. Muy pronto, la manipulación de esta nueva amistad la alejará de su padre, que no descubrirá sus verdaderos motivos hasta que sea demasiado tarde.</p>
             </span>
 
+            <div id="botones-para-compartir" style="display:inline;float:left;margin-top:-5px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.mylifetime.com/movies/a-fathers-nightmare" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.mylifetime.com/movies/a-fathers-nightmare" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.mylifetime.com/movies/a-fathers-nightmare" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
             
                 <div class="logo">
                     <img src="https://i.imgur.com/SXPK7f2.jpg" style="height:25px">
