--- a/A&E Pesadilla de un Padre/video.html
+++ b/A&E Pesadilla de un Padre/video.html
@@ -133,6 +133,7 @@
 
         .tgx_text_light {
             font-weight: 400;
+            line-height: 1.5em;
         }
 
         .tgx_text_medium {
