--- a/university loyola/Cube.html
+++ b/university loyola/Cube.html
@@ -506,11 +506,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i14.text.css:text/base/css*/
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
-#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 39px;
-        -ms-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
+#i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 49px;
+        -ms-transform: translate(-50%, -50%) translate(-1px, 82px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 82px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 82px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 82px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -721,11 +721,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i196.i197.positioning.css:positioning/base/css.1*/
-#i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 277px; height: 43px;
-        -ms-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-1px, 77px) rotate(0deg);
+#i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 277px; height: 50px;
+        -ms-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
 }
 /*#/#*//*#i5.i202.image.css:image/base/css*/
 #i202 { opacity: 1; }
@@ -918,7 +918,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://start.loyno.edu/pmc/online-programs?utm_medium=programmatic&utm_source=eikon&utm_campaign=native&utm_content=cpc'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://start.loyno.edu/pmc/online-programs?utm_medium=programmatic#lead-form'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i181.i182.positioning.js:positioning/base/js.2*/
@@ -944,7 +944,7 @@ bmShow('i202');
 /* Name: On Click; */
 document.getElementById('i216').addEventListener('click', function(e){
     /*#i217.i218.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://start.loyno.edu/pmc/online-programs?utm_medium=programmatic&utm_source=eikon&utm_campaign=native&utm_content=cpc'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'http://start.loyno.edu/pmc/online-programs?utm_medium=programmatic#lead-form'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
@@ -964,7 +964,7 @@ bmShow('i212');
 /* Name: On Click; */
 document.getElementById('i220').addEventListener('click', function(e){
     /*#i221.i222.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://start.loyno.edu/pmc/online-programs?utm_medium=programmatic&utm_source=eikon&utm_campaign=native&utm_content=cpc'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://start.loyno.edu/pmc/online-programs?utm_medium=programmatic#lead-form'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
