--- a/university loyola/Cube.html
+++ b/university loyola/Cube.html
@@ -470,7 +470,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
-/*#cube.css:cube/globalcss.1*/
+/*#i5.i196.text.css:text/base/css*/
+#i196 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
     -webkit-transform: translateZ(-1000px);
@@ -599,29 +601,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i2.cube.css:cube/base/css.1*/
-#i2.shape-holder {
-    position: absolute;
-
-    -ms-touch-action: none;
-    background: transparent;
-
-    opacity: 0;
-    -webkit-transition: opacity 0.5s;
-    -o-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    transition: opacity 0.5s, scale 0.8s;
-}
-
-#i2 .cube-Panel {
-    -webkit-backface-visibility:hidden;
-    -moz-backface-visibility:hidden;
-    -ms-backface-visibility: visible;
-    backface-visibility:hidden;
-    background-size: cover;
-    overflow: hidden;
-}
-
 /*#/#*//*#visibility.css:visibility/globalcss*/
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
@@ -718,8 +697,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(96px, 146px) rotate(0deg);
         transform: translate(0, 0) translate(96px, 146px) rotate(0deg);
 }
-/*#/#*//*#i5.i196.text.css:text/base/css*/
-#i196 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
+/*#/#*//*#i2.cube.css:cube/base/css.1*/
+#i2.shape-holder {
+    position: absolute;
+
+    -ms-touch-action: none;
+    background: transparent;
+
+    opacity: 0;
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    -moz-transition: opacity 0.5s;
+    transition: opacity 0.5s, scale 0.8s;
+}
+
+#i2 .cube-Panel {
+    -webkit-backface-visibility:hidden;
+    -moz-backface-visibility:hidden;
+    -ms-backface-visibility: visible;
+    backface-visibility:hidden;
+    background-size: cover;
+    overflow: hidden;
+}
+
 /*#/#*//*#i196.i197.positioning.css:positioning/base/css.1*/
 #i196 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 277px; height: 50px;
         -ms-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
@@ -789,15 +789,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(96px, 146px) rotate(0deg);
         transform: translate(0, 0) translate(96px, 146px) rotate(0deg);
 }
-/*#/#*//*#i6.i214.text.css:text/base/css*/
-#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i214.i215.positioning.css:positioning/base/css.1*/
 #i214 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 51px;
-        -ms-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-1px, 81px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(-1px, 78px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 78px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 78px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 78px) rotate(0deg);
 }
+/*#/#*//*#i6.i214.text.css:text/base/css*/
+#i214 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 14px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); }
 /*#/#*//*#i6.i220.shape.css:shape/base/css*/
 #i220 { background-color: #dedede; opacity: 0.00;
 }
