--- a/A&E Pesadilla de un Padre/video.html
+++ b/A&E Pesadilla de un Padre/video.html
@@ -192,8 +192,8 @@
             width: 90px;
             line-height: 1.3em;
             z-index: 2;
-            margin-left: 45%;
-            left: -30px;
+            margin-left: 105px;
+            
             background-color: #000;
             padding: 5px;
             border-radius: 20px;
@@ -257,7 +257,7 @@
 <body class="tgx">
     <div class="tgx_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <iframe style="margin-left:-70px;" width="460" height="260"src="https://www.youtube.com/embed/AA2v83c-Nu4?rel=0&autoplay=1&modestbranding=0&playlist=Z7oyMy9ECHY&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="margin-left:-70px;" width="460" height="260"src="https://www.youtube.com/embed/AA2v83c-Nu4?rel=0&autoplay=1&modestbranding=0&playlist=AA2v83c-Nu4&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
         <div class="tgx_cover">
