--- a/JuanCuervo/storylateral.html
+++ b/JuanCuervo/storylateral.html
@@ -162,8 +162,8 @@ Entra a <strong>https://puntosmedios.com/  </strong>  y termina con las excusas 
 </i></span><br>
 			</div>
 
-				<div style="text-align: right;background-color: white;background-size: 25px;height: 50px;left: 0;bottom: 0;">
-					<a href=" https://puntosmedios.com/" style="line-height: 31px;" target="_blank"><img src="https://i.imgur.com/8xxE9I1.png" style="height:25px; float:left;"></a>
+				<div style="text-align: right;background-color: white;background-size: 25px;height: 60px;left: 0;bottom: 5;">
+					<a href=" https://puntosmedios.com/" style="line-height: 31px;" target="_blank"><img src="https://sprcdn-prod0-sam.sprinklr.com/9009/http___vector.me_files_images_-f1c5f004-1fe7-4d72-a39a-496f968f9be6-1325974013.png" style="height:25px; float:left;"></a>
 					<div id="botones-para-compartir" style="display:inline;float:left;margin-left:8px;margin-top:13px;">
 							<span>  
 								<a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://puntosmedios.com/ "  target="block">    
@@ -176,9 +176,9 @@ Entra a <strong>https://puntosmedios.com/  </strong>  y termina con las excusas 
 									<img alt="compartir en twitter" class="twitteri" height="16" src="http://3.bp.blogspot.com/-TgonF6vzJs0/Uh1Hmxqk8aI/AAAAAAAAAiA/MdT4pRWKRbI/s1600/twitter.png" title="compartir en twitter" width="16" /></a>
 							</span>
 						</div>
-					<div class="logo">
+					<!--<div class="logo">
 						<a href=" https://puntosmedios.com/" style="line-height: 31px;" target="_blank"><span style="font-size: 11.5px;font-weight:800">Activa Hoy tu Roaming</span></a>
-					</div>
+					</div>-->
 				</div>
 		</div>
 	</div>
@@ -189,6 +189,8 @@ Entra a <strong>https://puntosmedios.com/  </strong>  y termina con las excusas 
 	<script>
 		ClaroScroll.show('ClaroScroll')
 	</script>-->
+	
+        </div> </div>
 </body>
 </html>
 
