--- a/JuanCuervo/storylateral.html
+++ b/JuanCuervo/storylateral.html
@@ -163,7 +163,7 @@ Entra a <strong>https://puntosmedios.com/  </strong>  y termina con las excusas 
 			</div>
 
 				<div style="text-align: right;background-color: white;background-size: 25px;height: 60px;left: 0;bottom: 5;">
-					<a href=" https://puntosmedios.com/" style="line-height: 31px;" target="_blank"><img src="https://sprcdn-prod0-sam.sprinklr.com/9009/http___vector.me_files_images_-f1c5f004-1fe7-4d72-a39a-496f968f9be6-1325974013.png" style="height:25px; float:left;"></a>
+					<a href=" https://puntosmedios.com/" style="line-height: 31px;" target="_blank"><img src="https://sprcdn-prod0-sam.sprinklr.com/9009/http___vector.me_files_images_-f1c5f004-1fe7-4d72-a39a-496f968f9be6-1325974013.png" style="height:40px; float:left; padding-right: 20px;"></a>
 					<div id="botones-para-compartir" style="display:inline;float:left;margin-left:8px;margin-top:13px;">
 							<span>  
 								<a class="shared" href="https://www.facebook.com/sharer/sharer.php?u= https://puntosmedios.com/ "  target="block">    
