--- a/RealMadrid/fadeEspa2.html
+++ b/RealMadrid/fadeEspa2.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'http://www.realmadrid.com/area-vip';
+                adfClickTAGUrl = 'https://www.realmadrid.com/area-vip?utm_source=RTB&utm_medium=OnNative_Esp&utm_campaign=Temporada_18_19';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
