--- a/Excellence/fade2.html
+++ b/Excellence/fade2.html
@@ -339,13 +339,12 @@
         </div>
         <div class="value_text"> 
             <span class="value_text_title value_text_bold">
-             Gift Yourself A New Tradition To Celebrate With Style
+            Excellence Resorts: Cancun, Punta Cana & Montego Bay
             </span>
             <br/>  
             <span class="value_text_light value_text_small" style="color:black;">
-                <p style="margin-right:15px; text-align: justify; width: 90%; margin-top: 15px; line-height: 1.2em">
-    Think of it; there is always a <b>special occasion </b> to share <b>unforgettable moments</b> with the people you care the most.
-Whether it’s a major milestone or a personal achievement. From <b>significant birthdays</b> to solo-friends trip, you deserve to <b>celebrate in style!</b>
+                <p style="margin-right:15px; text-align: justify; width: 92%; margin-top: 10px; line-height: 1.1em">
+    <b> Excellence Resorts  </b>are found in 3 fantasy destinations, each one in secluded areas for the best guest experience. Feel and live the <b> Standard of Excellence </b>  since your plane lands, private transportation will get you to <b> Excellence, </b>  custom attention & service will be your companion every moment of your stay at <b> Excellence Resorts. </b> 
 
 
                 </p> 
