--- a/JuanCuervo/story-resize.html
+++ b/JuanCuervo/story-resize.html
@@ -381,13 +381,13 @@
 
                
 
-                <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-18px; padding-top:30px; padding-bottom:20px;">
+                <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-18px; padding-top:30px; padding-bottom:30px;">
                         <a href="https://puntosmedios.com/" style="display:block; margin-left:-10px;" target="_blank">
                             <div class="img-news" style="background-image:url(https://i.imgur.com/ofwt9Sa.jpg); margin-bottom:-10px; width: 320px;"></div>
                         </a>
                     </span> 
                    
-                 <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; margin-left:0px; text-align: justify;">
+                 <span class="bzm_text_title  bzm_text_medium" style="display:block;color:#000; margin-left:0px; text-align: justify; margin-top: 20px;">
                 <i><strong>4.</strong> <i> Dentro de la misma aplicación recibirás el link de tu evento para que lo compartas con tus amigos por Whatsapp. </i> <br> </span>
                 <br>
 
