--- a/JuanCuervo/story-resize.html
+++ b/JuanCuervo/story-resize.html
@@ -414,7 +414,7 @@
                 
                 <span class="bzm_text_title  bzm_text_medium" style="display:block; margin-top:-15px; padding-top:30px; padding-bottom:30px;">
                         <a href="https://puntosmedios.com/" style="display:block; margin-left:-10px;" target="_blank">
-                            <div class="img-news" style="background-image:url(https://i.imgur.com/3yHF9Yn.jpg); margin-bottom:-10px; width: 320px;"></div>
+                            <div class="img-news" style="background-image:url(https://i.imgur.com/ljhMddK.jpg); margin-bottom:-10px; width: 320px;"></div>
                         </a>
                     </span> 
                    
